new structure introduced

--- a/sdk/examples/create-evaluation-with-custom-metric.mdx
+++ b/sdk/examples/create-evaluation-with-custom-metric.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Run evaluation with custom metrics'
 description: "Learn how to create and run evaluations for custom metrics using the SDK"
-icon: "badge-check"
+icon: "screwdriver-wrench"
 ---
 
 [Evaluations](/concepts/product/evaluation) allow you to assess how well a specific [version](/concepts/product/version) of your [product](/concepts/product) performs against a set of [test cases](/concepts/product/test/case) by running individual [evaluation tasks](/concepts/product/evaluation/task).
