--- a/sdk/examples/create-evaluation.mdx
+++ b/sdk/examples/create-evaluation.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Run Evaluations'
 description: "Learn how to create and run evaluations using the SDK"
-icon: "badge-check"
+icon: "person-running"
 ---
 
 [Evaluations](/concepts/product/evaluation) allow you to assess how well a specific [version](/concepts/product/version) of your [product](/concepts/product) performs against a set of [test cases](/concepts/product/test/case) by running individual [evaluation tasks](/concepts/product/evaluation/task).
