--- a/sdk/examples/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/examples/monitor-production-responses-to-user-queries.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Monitor production responses to user queries'
 description: "Learn how to create evaluation tasks from user queries in production for deeper analysis"
-icon: "badge-check"
+icon: "gears"
 ---
 
 [Evaluations](/concepts/product/evaluation) allow you to assess how well a specific [version](/concepts/product/version) of your [product](/concepts/product) performs against real user queries in production by running individual [evaluation tasks](/concepts/product/evaluation/task).
