new structure start

--- a/concepts/product/test/quality-evolutions.mdx
+++ b/concepts/product/test/quality-evolutions.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Create Quality Tests"
-description: "Evaluate the quality and correctness of your outputs"
+title: "Evolve your Quality Tests"
+description: "In order to test diverse user behaviour, Galtea provides diverse evolutions of base test cases"
 icon: ""
 ---
 
