--- a/concepts/product/test/red-teaming-threats.mdx
+++ b/concepts/product/test/red-teaming-threats.mdx
@@ -1,21 +1,21 @@
 ---
-title: "Create Red Teaming Tests"
-description: "Evaluate security, safety, and bias aspects of your AI products"
+title: "Evaluate against threats"
+description: "Galtea platform tests the robustness of your product against multiple types of threats"
 icon: ""
 ---
 
-## What are Red Teaming Tests?
+## What is a threat?
 
-Red teaming tests in Galtea are designed to evaluate the security, safety, and bias aspects of your [product](/concepts/product). These tests typically consist of different types of [threats](/concepts/product/test/red-teaming-threats) like adversarial inputs specifically crafted to probe potential weaknesses or vulnerabilities in your AI system.
+Red teaming tests are divided into different type of threats in order test the robustness of your product against different types of attack or misuse. These threats are derived from various cybersecurity frameworks specifically defined for LLM based products such as:
 
 ## Creating Red Teaming Tests
 
 You can create red teaming tests in Galtea through two methods:
 
 <Tabs>
-  <Tab title="Generate from Your Known Threats">
+  <Tab title="Generate from Knowledge Base">
     <Steps>
-      <Step title="Prepare your threat input file">
+      <Step title="Prepare your knowledge base file">
         Create a file with examples of harmful content or sensitive topic areas you want to test
       </Step>
       <Step title="Configure the test">
