--- a/sdk/examples/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/examples/monitor-production-responses-to-user-queries.mdx
@@ -1,7 +1,8 @@
 ---
 title: 'Monitor production responses'
 description: "Learn how to create evaluation tasks from user queries in production for deeper analysis"
-icon: "users-between-lines"
+icon: "users"
+# iconType: "solid"
 ---
 
 [Evaluations](/concepts/product/evaluation) allow you to assess how well a specific [version](/concepts/product/version) of your [product](/concepts/product) performs against real user queries in production by running individual [evaluation tasks](/concepts/product/evaluation/task).
