--- a/concepts/product/version.mdx
+++ b/concepts/product/version.mdx
@@ -62,6 +62,6 @@ When creating a version in Galtea, you'll need to provide the following informat
   The guardrails applied to the version, separated by commas. **Example**: "content filtering, citation checking, legal compliance"
 </ResponseField>
 
-<ResponseField name="Endpoint Connection" type="Text">
+<ResponseField name="Endpoint" type="Text">
   The endpoint connection for the version. **Example**: "https://api.company.com/summarizer/v2"
 </ResponseField>
