--- a/sdk/api/test-case-service.mdx
+++ b/sdk/api/test-case-service.mdx
@@ -43,7 +43,7 @@ test_case = galtea.test_cases.create(
 </ResponseField>
 
 <ResponseField name="tag" type="string">
-  The tag for the test case. This is a label that can help you categorize or identify the test case.
+  An optional tag to categorize or label the test case (e.g., "general_knowledge", "edge_cases").
 </ResponseField>
 
 ## Listing Tests
