--- a/concepts/product.mdx
+++ b/concepts/product.mdx
@@ -32,6 +32,8 @@ A product in Galtea is associated with:
 
 <SDKProductServiceCard />
 
+While products cannot be created via the SDK (creation is done through the Galtea platform), you can use the SDK to list existing products, retrieve specific products by their ID or name, and delete products. See the [Product Service API documentation](/sdk/api/product-service) for more details.
+
 ## Product Properties
 
 When creating a product in Galtea, you'll need to provide the following information:
@@ -70,23 +72,25 @@ When creating a product in Galtea, you'll need to provide the following informat
   Indicates if red teaming (security, safety, and bias) is a priority for the product.
 </ResponseField>
 
-<ResponseField name="Risk Level" type="Enum" required>
+<ResponseField name="Risk Level" type="Enum (string)" required>
   The risk level of the product under the EU AI Act.
   Possible values:
-  - **Not applicable**: The product is not covered by the EU AI Act.
-  - **High**: See the [EU AI Act high-risk systems](https://artificialintelligenceact.eu/chapter/3/)
-  - **Medium**: Systems with moderate risk potential
-  - **Low**: Systems with minimal risk potential
+  - GPAI // TODO: Add explanation of what this means
+  - GPAI_SYSTEMIC // TODO: Add explanation of what this means
+  - HIGH // TODO: Add explanation of what this means
+  - PROHIBITED // TODO: Add explanation of what this means
+  - SPECIAL_SYSTEM // TODO: Add explanation of what this means
 </ResponseField>
 
-<ResponseField name="Operator Type" type="Enum" required>
+<ResponseField name="Operator Type" type="Enum (string)" required>
   The operator type of the product under the EU AI Act.
   Possible values:
-  - **Not applicable**: The product is not covered by the EU AI Act.
-  - **Provider**: "a natural or legal person, public authority, agency or other body that develops an AI system or a general-purpose AI model or that has an AI system or a general-purpose AI model developed and places it on the market or puts the AI system into service under its own name or trademark, whether for payment or free of charge"
-  - **User**: An entity that uses the AI system under its authority except for personal non-professional activity
-  - **Importer**: "a natural or legal person located or established in the Union that places on the market an AI system that bears the name or trademark of a natural or legal person established in a third country"
-  - **Distributor**: "a natural or legal person in the supply chain, other than the provider or the importer, that makes an AI system available on the Union market"
+  - AUTHORISED_REPRESENTATIVE // TODO: Add explanation of what this means
+  - DEPLOYER // TODO: Add explanation of what this means
+  - DISTRIBUTER // TODO: Add explanation of what this means
+  - IMPORTER // TODO: Add explanation of what this means
+  - PRODUCT_MANUFACTURER // TODO: Add explanation of what this means
+  - PROVIDER // TODO: Add explanation of what this means
 </ResponseField>
 
 <Info>Legal definitions are extracted from the [EU AI Act](https://artificialintelligenceact.eu/article/3/).</Info>
