--- a/sdk/api/version-service.mdx
+++ b/sdk/api/version-service.mdx
@@ -34,14 +34,14 @@ version = galtea.versions.create(
 
 
 <ResponseField name="optional_props" type="dict[str, str]">
-  Additional properties for the version, possible keys include:
-    - **dataset_description**: Description of the dataset used
-    - **dataset_uri**: URI to the dataset
-    - **description**: Version description
-    - **endpoint**: API endpoint of the version
-    - **model_id**: The id of the model used in the version. The models are listed in the [model's page of the platform](https://platform.galtea.ai/models).
-    - **guardrails**: Guardrails configuration
-    - **system_prompt**: The system prompt used for this version
+  A dictionary of additional properties for the version. Keys should be in snake_case. Supported keys include:
+  - **dataset_description** (string, optional): Description of the dataset used for training or fine-tuning this version.
+  - **dataset_uri** (string, optional): URI pointing to the dataset.
+  - **description** (string, optional): A textual description of this version.
+  - **endpoint** (string, optional): The API endpoint where this version of the model is accessible.
+  - **guardrails** (string, optional): Configuration or description of safety guardrails applied to this version.
+  - **system_prompt** (string, optional): The system-level prompt used for this version of the model.
+  - **model_id** (string, optional): The ID of a [Model](/concepts/model) registered in Galtea, used for cost tracking and associating with a specific LLM.
 </ResponseField>
 
 ## Listing Versions
