--- a/concepts/product/version.mdx
+++ b/concepts/product/version.mdx
@@ -41,7 +41,7 @@ When creating a version in Galtea, you'll need to provide the following informat
 </ResponseField>
 
 <ResponseField name="Model ID" type="ID (text)">
-  The [model](/concepts/model) ID used in the version. You can search for models like: "GPT-4", "Claude 2", or "Llama 2-70B" in the platform and then grab their ID to associate it with the version.
+  The ID of a [Model](/concepts/model) registered in Galtea. This is used for cost tracking and associating the version with a specific LLM's pricing and tokenization characteristics.
 
   This is used to calculate the cost of the inference for the version during [evaluation tasks](/concepts/product/evaluation/task).
 </ResponseField>
