--- a/sdk/api/test-case-service.mdx
+++ b/sdk/api/test-case-service.mdx
@@ -43,7 +43,7 @@ test_case = galtea.test_cases.create(
 </ResponseField>
 
 <ResponseField name="tag" type="string">
-  An optional tag to categorize or label the test case (e.g., "general_knowledge", "edge_cases").
+  An optional tag to categorize or label the test case (e.g., "general_knowledge", "edge_cases", "customer_query"). This helps in organizing and filtering test cases.
 </ResponseField>
 
 ## Listing Tests
