--- a/sdk/examples/create-evaluation.mdx
+++ b/sdk/examples/create-evaluation.mdx
@@ -45,7 +45,7 @@ for test_case in test_cases:
     
     # Your product's actual response to the input
     timeBeforeCall = datetime.now()
-    response = your_product_function(test_case.input, test_case.context, retrieval_context)
+    response_data = your_product_function(test_case.input, test_case.context, retrieval_context)
     timeAfterCall = datetime.now()
     
     # Run evaluation task
@@ -53,20 +53,21 @@ for test_case in test_cases:
         metrics=["accuracy_v1", "relevance_v1", "context_accuracy"],
         evaluation_id=evaluation.id,
         test_case_id=test_case.id,
-        actual_output=response.output,
-        retrieval_context=retrieval_context,
+        actual_output=response_data.output, # Assuming response_data has an 'output' attribute
+        retrieval_context=retrieval_context, # Should be a single string if applicable
         ###################### Optional Parameters ######################
         latency=(timeAfterCall - timeBeforeCall).total_seconds() * 1000,
         usage_info={
-          "input_tokens": response.inputTokens,
-          "output_tokens": response.outputTokens,
-          "cache_read_input_tokens": response.cacheReadInputTokens,
+          "input_tokens": response_data.input_tokens,
+          "output_tokens": response_data.output_tokens,
+          "cache_read_input_tokens": response_data.cache_read_input_tokens,
         },
         cost_info={
           "cost_per_input_token": 0.00002,
           "cost_per_output_token": 0.00005,
           "cost_per_cache_read_input_token": 0.00001,
         },
+        # scores=[0.8, None, 0.95] # Example: score for accuracy_v1, platform evaluates relevance_v1, score for context_accuracy
         #################################################################
     )
 
@@ -80,6 +81,10 @@ print("All evaluation tasks submitted")
   The `latency` and `usage_info` parameters are optional but highly recommended to be used.
   They can be used to track the performance in latency and costs of your product.
 </Info>
+
+<Warning>
+  Directly providing `input`, `expected_output`, or `context` to `galtea.evaluation_tasks.create` when a `test_case_id` is used is deprecated. These parameters will be sourced from the test case. This approach limits analytics and consistency.
+</Warning>
 
 ### Customized Test Cases for Evaluation Tasks
 
