Fix broken links

--- a/concepts/product.mdx
+++ b/concepts/product.mdx
@@ -16,7 +16,7 @@ A product in Galtea represents a functionality or service that you want to evalu
 
 <Note>Even if your organization has a single public-facing product (like a website or dashboard for all user interactions), you should define separate Galtea products for each distinct functionality you want to evaluate.</Note>
 
-You can view and manage your products on the [Galtea dashboard](https://platform.galtea.ai/products).
+You can view and manage your products on the [Galtea dashboard](https://platform.galtea.ai/).
 
 ## Related Concepts
 
