--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -21,7 +21,7 @@ galtea = new Galtea(api_key="<YOUR_GALTEA_PLATFORM_API_KEY>")
 ### Registering a Product
 
 Registering a [product](/concepts/product) is the first step to start using the Galtea platform.
-In this case, we don't allow to create a product from the sdk, therefore you need to do this from the [platform](https://platform.galtea.ai/products).
+In this case, we don't allow to create a product from the sdk, therefore you need to do this from the [platform](https://platform.galtea.ai/).
 
 ### Creating a Version
 
