--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -44,7 +44,7 @@ The first step in tracking the quality and reliability of your AI product is to 
 
 ![login to the platform](/images/login.png)
 
-Navigate to **[Products](https://platform.galtea.ai/products) > Create New Product** and complete the product onboarding form. The product description is particularly important as it may be used during the generation of synthetic test data.
+Navigate to **[Products](https://platform.galtea.ai/) > Create New Product** and complete the product onboarding form. The product description is particularly important as it may be used during the generation of synthetic test data.
 
 ![product onboarding](/images/product-onboarding.png)
 
