--- a/sdk/api/product-service.mdx
+++ b/sdk/api/product-service.mdx
@@ -13,7 +13,7 @@ This Service is exposed by the `galtea.products` object and we will further expl
 </Info>
 
 <Note>
-  It is not supported to create product from the sdk, therefore you need to do this from the [platform](https://platform.galtea.ai/products).
+  It is not supported to create product from the sdk, therefore you need to do this from the [platform](https://platform.galtea.ai/).
 </Note>
 
 ## Listing Products
