Frames in changelog

--- a/snippets/changelog/2025-04-28.mdx
+++ b/snippets/changelog/2025-04-28.mdx
@@ -12,7 +12,9 @@ Our simulation-generated tests have been upgraded—delivering higher-quality ou
 A completely redesigned analytics page is now available! It features:
 - **Enhanced Filtering Capabilities.**
 - **Improved Data Clarity and Layout.**  
-  ![New Analytics Image](/images/changelog/2025-04-28_new-analytics-page.png)
+  <Frame>
+    <img src="/images/changelog/2025-04-28_new-analytics-page.png" alt="New Analytics Image" />
+  </Frame>
 
 The new design not only raises the clarity and density of data presentation but also improves your overall user experience.
 
@@ -32,9 +34,11 @@ We’re continuously refining the platform based on your feedback. This week’s
   Easily filter tests by its group.
 
 - **Smart Table Sorting:**  
-  When you apply a custom sort, the default (usually creation date) is automatically disabled.
+  When you apply a custom sort, the default (usually creation date) is automatically disabled.tional Filters" />
 
-  ![Additional Filters](/images/changelog/2025-04-28_additional-filters.png)
+  <Frame>
+    <img src="/images/changelog/2025-04-28_additional-filters.png" alt="Additional Filters" />
+  </Frame>
 
 Enjoy the improvements!
 </Update>
