--- a/snippets/changelog/2025-05-05.mdx
+++ b/snippets/changelog/2025-05-05.mdx
@@ -20,7 +20,9 @@ We're continuing to expand the power of the Analytics page! This update introduc
 - **Graph Tooltips**  
   Hovering over truncated names now reveals full labels with tooltips, helping you understand graph contents more clearly.
 
-![Radar View](/images/changelog/2025-05-05_radar-view.png)
+<Frame>
+    <img src="/images/changelog/2025-05-05_radar-view.png" alt="Radar View" />
+</Frame>
 
 ## SDK Safeguards
 
