--- a/snippets/changelog/2025-05-12.mdx
+++ b/snippets/changelog/2025-05-12.mdx
@@ -23,7 +23,9 @@ Our data generation tools have been expanded with:
 
 We've enhanced the clarity of threat selection in the Test Creation form. The selection now displays both the threat and which security frameworks that threat covers, making it easier to align your testing with specific security standards.
 
-![Improved Threat Selection](/images/changelog/2025-05-12_improved_threat_selection.png)
+<Frame>
+    <img src="/images/changelog/2025-05-12_improved_threat_selection.png" alt="Improved Threat Selection" />
+</Frame>
 
 ## Analytics & Navigation Enhancements
 
