Migration into separate files
Fixed paths

--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -91,7 +91,7 @@ When creating a test in Galtea, you'll need to provide the following information
 </ResponseField>
 
 <ResponseField name="Variants" type="list[string]">
-  A list of strings specifying modifications to apply to original queries for synthetic data generation (e.g., 'paraphrased', 'typos', 'incorrect'). This is applicable only if `Knowledge Base File` is used. Refer to the [SDK documentation for test creation](/sdk/api/test-service#param-variants) for a comprehensive list of available variants.
+  A list of strings specifying modifications to apply to original queries for synthetic data generation (e.g., 'paraphrased', 'typos', 'incorrect'). This is applicable only if `Knowledge Base File` is used. Refer to the [SDK documentation for test creation](/sdk/api/test/service#param-variants) for a comprehensive list of available variants.
   <Note>Using variants will increase the number of generated test cases and consequently the cost of test generation, unless a *maximum number of test cases* is provided.</Note>
 </ResponseField>
 
