--- a/sdk/examples/create-test.mdx
+++ b/sdk/examples/create-test.mdx
@@ -5,7 +5,7 @@ icon: "clipboard-list"
 ---
 
 <Info>
-  Tests can be generated automatically by Galtea providing a knowledge file as shown [here](/sdk/api/test-service#create-test).
+  Tests can be generated automatically by Galtea providing a knowledge file as shown [here](/sdk/api/test/service#create-test).
 
   In this guide, we will show you how to create custom [tests](/concepts/product/test), where you can define the [test cases](/concepts/product/test/case).
 </Info>
@@ -38,7 +38,7 @@ icon: "clipboard-list"
     <Warning>
       The test file should follow the appropriate structure for either [quality tests](/concepts/product/test/quality-tests#example-quality-tests-and-file-format) or [red teaming tests](/concepts/product/test/red-teaming-tests#example-red-teaming-tests-and-file-format).
     
-      If the file is not correctly formatted, the test cases will not be created. But they can be created manually following [this example](/sdk/api/test-case-service#create-test-case).
+      If the file is not correctly formatted, the test cases will not be created. But they can be created manually following [this example](/sdk/api/test-case/service#create-test-case).
     </Warning>
   </Tab>
 
@@ -89,7 +89,7 @@ icon: "clipboard-list"
     <Warning>
       Make sure your test data follows the correct structure as specified in the [quality tests](/concepts/product/test/quality-tests#example-quality-tests-and-file-format) or [red teaming tests](/concepts/product/test/red-teaming-tests#example-red-teaming-tests-and-file-format) documentation.
       
-      If the file is not correctly formatted, the test cases will not be created. But they can be created manually following [this example](/sdk/api/test-case-service#create-test-case).
+      If the file is not correctly formatted, the test cases will not be created. But they can be created manually following [this example](/sdk/api/test-case/service#create-test-case).
     </Warning>
   </Tab>
 </Tabs>
@@ -102,7 +102,7 @@ After creating a test:
   <Card title="Create an Evaluation" icon="badge-check" href="/sdk/examples/create-evaluation">
     Run your test against a specific product version
   </Card>
-  <Card title="API Reference" icon="code" href="/sdk/api/test-service">
+  <Card title="API Reference" icon="code" href="/sdk/api/test/service">
     View the complete Test Service API reference
   </Card>
 </CardGroup>
