--- a/sdk/api/galtea.mdx
+++ b/sdk/api/galtea.mdx
@@ -23,13 +23,13 @@ galtea = Galtea(api_key="YOUR_API_KEY")
 
 The `Galtea` class provides access to the following services:
 
-- [`products`](/sdk/api/product-service): Access [product](/concepts/product) related functionalities.
-- [`versions`](/sdk/api/version-service): Access [version](/concepts/product/version) related functionalities.
-- [`tests`](/sdk/api/test-service): Access [test](/concepts/product/test) related functionalities.
-- [`test cases`](/sdk/api/test-case-service): Access [test cases](/concepts/product/test/case) related functionalities.
-- [`metrics`](/sdk/api/metrics-service): Access [metric](/concepts/metric-type) related functionalities.
-- [`evaluations`](/sdk/api/evaluation-service): Access [evaluation](/concepts/product/evaluation) related functionalities.
-- [`evaluation_tasks`](/sdk/api/evaluation-task-service): Access [evaluation task](/concepts/product/evaluation/task) related functionalities.
+- [`products`](/sdk/api/product/service): Access [product](/concepts/product) related functionalities.
+- [`versions`](/sdk/api/version/service): Access [version](/concepts/product/version) related functionalities.
+- [`tests`](/sdk/api/test/service): Access [test](/concepts/product/test) related functionalities.
+- [`test cases`](/sdk/api/test-case/service): Access [test cases](/concepts/product/test/case) related functionalities.
+- [`metrics`](/sdk/api/metrics/service): Access [metric](/concepts/metric-type) related functionalities.
+- [`evaluations`](/sdk/api/evaluation/service): Access [evaluation](/concepts/product/evaluation) related functionalities.
+- [`evaluation_tasks`](/sdk/api/evaluation-task/service): Access [evaluation task](/concepts/product/evaluation/task) related functionalities.
 
 
 ### Example
