--- a/snippets/cards/sdk-test-service-card.mdx
+++ b/snippets/cards/sdk-test-service-card.mdx
@@ -1,3 +1,3 @@
-<Card title="Test Service SDK" icon="clipboard-list" iconType="solid" href="/sdk/api/test-service">
+<Card title="Test Service SDK" icon="clipboard-list" iconType="solid" href="/sdk/api/test/service">
   SDK methods for managing tests
 </Card>
